# libcyberiadaml

./: CMakeLists.txt  CyberiadaMLPackOptions.cmake.in  Makefile  Makefile.old  README.md  cyb_actions.c  cyb_actions.h  cyb_actions_pcre2.c  cyb_error.h  cyb_graph.c  cyb_graph.h  cyb_graph_recon.c  cyb_graph_recon.h  cyb_meta.c  cyb_meta.h  cyb_node_stack.c  cyb_node_stack.h  cyb_regexps.c  cyb_regexps.h  cyb_regexps_pcre2.c  cyb_string.c  cyb_string.h  cyb_structs.c  cyb_structs.h  cyb_types.c  cyb_types.h  cyberiadaml-config.cmake.in  cyberiadaml.c  cyberiadaml.h  geometry.c  geometry.h  isomorph.c  test.c  test_utf8.c  utf8enc.c  utf8enc.h
graph-samples/: CyberiadaFormat-Autoborder-2.graphml  CyberiadaFormat-two-graphs.graphml  berloga-autoborder-illdefined.graphml  berloga-autoborder.graphml  berloga-stapler.graphml  ostranna-player.graphml
parser/: CMakeLists.txt  parser.c
